--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Studio3</string>
+    <string name="PiteView">pite.utils.PiteView</string>
+    <string name="foot">没有更多数据了</string>
+    <string name="empty">暂无数据55555</string>
+    <string name="title">购物车选中动画</string>
+    <string name="add">买一件</string>
 </resources>
